Implement raft (#2)
* initial (and basic) implementation

* probably actually raft

* it works!

* checkpoint

* make tests all work nice

* convert to using immutables

* Refactor to use new concurrency model

* refactor

* format

* fixes

* fixes and similar

* current state of world

* couple cleanups